--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div>(ML major)</div>
     </div>
     <div class="horizontal">
-        <div><mark class='marker0'>ETH Zurich</mark></div>
+        <div><mark class='marker2 underline'>ETH Zurich</mark></div>
         <div>2024 - current</div>
     </div>
     <div></div>
@@ -125,7 +125,7 @@
 
         <div>
             <span style="margin-right: 10px">2nd Author</span>
-            <span><mark class='marker1'>NeurIPS 2024</mark></span>
+            <span><mark class='marker0'>NeurIPS 2024</mark></span>
         </div>
     </div>
     <div class="small_margin" style="text-align: justify">Designed a system to generate novel board games in a DSL using a LLM as a mutation operator. Automated evaluation through play-through sampling between general game-playing agents, with heuristics to score runs.</div>
@@ -150,7 +150,7 @@
             <div class="vertical medium_margin">
     <div class="horizontal">
         <span>
-            <span class="title"><mark class='marker2'><img src="icons/apple.svg" alt="" style="width: auto; height: 13px; margin-right: 3px; margin-top: -4px;"> Apple</mark></span>
+            <span class="title"><mark class='marker1'><img src="icons/apple.svg" alt="" style="width: auto; height: 13px; margin-right: 3px; margin-top: -4px;"> Apple</mark></span>
             <span>- Research Internship - Front-end & Machine Learning</span>
         </span>
         <div>
