--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <h1>Alexander George Padula</h1>
         <div class="horizontal medium_margin" style="row-gap: 1em"><div style="display: inline-flex; align-items: center; text-decoration: none;">
     <img src="/icons/mail.svg" alt="" style="width: 17px; height: 17px; margin-right: 5px;">
-    alexander.george.padula@gmail.com
+    <span>alexander.george.padula</span><span>@</span><span>gmail.com</span>
 </div>
 <div style="display: inline-flex; align-items: center; text-decoration: none;">
     <img src="/icons/github.svg" alt="" style="width: 17px; height: 17px; margin-right: 5px;">
-    <a href='https://github.com/PadLex' target='_blank'>github.com/PadLex</a>
+    <a href='https://github.com/PadLex' target='_blank'>PadLex</a>
 </div>
 <div style="display: inline-flex; align-items: center; text-decoration: none;">
     <img src="/icons/linkedin.svg" alt="" style="width: 17px; height: 17px; margin-right: 5px;">
-    <a href='https://www.linkedin.com/in/alexander-padula-8a0a3b138/' target='_blank'>Profile</a>
+    <a href='https://www.linkedin.com/in/alexander-padula-8a0a3b138/' target='_blank'>alexander-padula-8a0a3b138</a>
 </div>
 <div style="display: inline-flex; align-items: center; text-decoration: none;">
     <img src="/icons/passport.svg" alt="" style="width: 17px; height: 17px; margin-right: 5px;">
@@ -266,7 +266,7 @@
             <span>Jan 2020 - Jan 2021</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">Built 3D printer and transformed it into a DIY laser cutter. Developed the open-source Python library <a href='https://github.com/PadLex/SvgToGcode' target='_blank'>svg-to-gcode</a>. The tool’s GUI has <mark class='marker9 underline'>garnered over 13,000 downloads and a community that helps maintain it.</mark></div>
+    <div class="small_margin" style="text-align: justify">Built 3D printer and transformed it into a DIY laser cutter. Developed the open-source Python library <a href='https://github.com/PadLex/SvgToGcode' target='_blank'>svg-to-gcode</a>. The tool’s GUI has <mark class='marker9 underline'>garnered over <a href='https://somsubhra.github.io/github-release-stats/?username=JTechPhotonics&repository=J-Tech-Photonics-Laser-Tool' target='_blank'>13,000 downloads</a> and a community that helps maintain it.</mark></div>
 </div>
         </div>
         <div class="horizontal large_margin" style="justify-content: left; align-items: end">
