Update resume link, fix print margin

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div>(ML major)</div>
     </div>
     <div class="horizontal">
-        <div><mark class='marker2 underline'>ETH Zurich</mark></div>
+        <div><mark class='marker3 underline'>ETH Zurich</mark></div>
         <div>2024 - 2026 (expected)</div>
     </div>
     <div></div>
@@ -52,7 +52,7 @@
         <div>Maastricht University</div>
         <div>2021 - 2024</div>
     </div>
-    <div><mark class='marker3 underline'>Summa Cum Laude</mark>, GPA: 9.0 ≈ 4.0 (USA)</div>
+    <div><mark class='marker4 underline'>Summa Cum Laude</mark>, GPA: 9.0 ≈ 4.0 (USA)</div>
 </div>
         </div>
         <div>
@@ -81,7 +81,7 @@
         <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
         Python
     </div>
-    <div>(PyTorch, <mark class='marker4 underline'>JAX</mark>)</div>
+    <div>(PyTorch, <mark class='marker5 underline'>JAX</mark>)</div>
 </div>
 <div class="horizontal">
     <div>
@@ -95,7 +95,7 @@
         <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
         C
     </div>
-    <div>(<mark class='marker5 underline'>CUDA</mark>)</div>
+    <div>(<mark class='marker6 underline'>CUDA</mark>)</div>
 </div>
 <div class="horizontal">
     <div>
@@ -109,7 +109,14 @@
         <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
         Java
     </div>
-    <div></div>
+    <div>(Reflection API)</div>
+</div>
+<div class="horizontal">
+    <div>
+        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
+        HPC
+    </div>
+    <div>(SLURM, ALPS cluster)</div>
 </div>
         </div>
     </div>
@@ -125,10 +132,24 @@
 
         <div>
             <span style="margin-right: 10px">2nd Author</span>
-            <span>NeurIPS 2025 (SEA)</span>
+            <span><mark class='marker0'>NeurIPS 2025 (SEA)</mark></span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">We implemented a new board-game DSL in JAX. Games compile to XLA, enabling RL training entirely on the GPU. Offers 10-100x speedup against previous SoTA DSL and lays groundwork for training general game-playing models.</div>
+    <div class="small_margin" style="text-align: justify">We implemented a new board-game DSL in JAX. <mark class='marker7 underline'>Games compile to XLA, enabling RL training entirely on the GPU.</mark> Offers 10-100x speedup against previous SoTA DSL and lays groundwork for training general game-playing models.</div>
+</div>
+<div class="vertical medium_margin">
+    <div class="horizontal">
+        <span>
+            <span class="title"><a href='https://drive.google.com/uc?export=download&id=1Qr80SBEaFthtR--R5vRll_8rc6CL-k1o' target='_blank'>Myndmap: A RAG-Supported Multimodal Study Environment</a></span>
+<!--            <span>- Front-end & ML</span>-->
+        </span>
+
+        <div>
+            <span style="margin-right: 10px">1st Author</span>
+            <span>under review</span>
+        </div>
+    </div>
+    <div class="small_margin" style="text-align: justify">Only course project selected by <a href='https://ivia.ch/' target='_blank'>IVIA lab</a> for publication. We built a LLM-assisted study environment that syncs slides, recordings, and exercises into a visual knowledge graph to quickly navigate between sources across modalities.</div>
 </div>
 <div class="vertical medium_margin">
     <div class="horizontal">
@@ -139,10 +160,10 @@
 
         <div>
             <span style="margin-right: 10px">2nd Author</span>
-            <span><mark class='marker0'>NeurIPS 2024</mark></span>
+            <span><mark class='marker1'>NeurIPS 2024</mark></span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">We designed a system to generate novel board games in a DSL using a LLM as a mutation operator. Automated evaluation through play-through sampling between general game-playing agents, with heuristics to score runs.</div>
+    <div class="small_margin" style="text-align: justify">We designed a system to generate novel board games in a DSL using a LLM as a mutation operator. Automated <mark class='marker8 underline'>evaluation through play-through sampling between general game-playing agents</mark>, with heuristics to score runs.</div>
 </div>
 <div class="vertical medium_margin">
     <div class="horizontal">
@@ -156,7 +177,7 @@
             <span>BNAIC 2024</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">In my BSc thesis, I explored novel PPO variations to stabilize LLM training with explicit rewards (now known as RLVR), restoring KL-divergence to the classic RL formulation and introducing a batch-entropy exploration bonus.</div>
+    <div class="small_margin" style="text-align: justify">In my BSc thesis, I explored novel PPO variations to stabilize LLM training with explicit rewards (now known as RLVR). Restored KL-divergence to the classic RL formulation and introduced a novel batch-entropy exploration bonus.</div>
 </div>
         </div>
         <div class="large_margin">
@@ -178,7 +199,7 @@
 <div class="vertical medium_margin">
     <div class="horizontal">
         <span>
-            <span class="title"><mark class='marker1'><img src="icons/apple.svg" alt="" style="width: auto; height: 13px; margin-right: 3px; margin-top: -4px;"> Apple</mark></span>
+            <span class="title"><mark class='marker2'><img src="icons/apple.svg" alt="" style="width: auto; height: 13px; margin-right: 3px; margin-top: -4px;"> Apple</mark></span>
             <span>- Research Internship - Front-end & Machine Learning</span>
         </span>
         <div>
@@ -186,7 +207,7 @@
             <span>July 2024 - Sep 2024</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">Authored an internal paper on code generation with LLMs. Presented research to 60+ employees, gaining traction across departments with the potential to <mark class='marker6 underline'>impact the next product cycle</mark>. Learned to share complex ideas concisely.</div>
+    <div class="small_margin" style="text-align: justify">Authored an internal paper on code generation with LLMs. <mark class='marker9 underline'>Presented research to 60+ employees</mark>, gaining traction across departments with the potential to impact the next product cycle. Learned to share complex ideas concisely.</div>
 <!--    <div class="small_margin collapsable">This is a test</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -200,7 +221,7 @@
             <span>Sep 2022 - Sep 2023</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">Developed a coding assistant for the Ludii DSL. Trained a LLM and <mark class='marker7 underline'>overcame data scarcity using grammar constrained decoding</mark>; had to develop a parser for incomplete code that could mask illegal tokens during inference.</div>
+    <div class="small_margin" style="text-align: justify">Developed a coding assistant for the Ludii DSL. Trained a LLM and <mark class='marker10 underline'>overcame data scarcity using grammar constrained decoding</mark>; had to develop a parser for incomplete code that could mask illegal tokens during inference.</div>
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -242,7 +263,7 @@
             <span>Nov 2018 - Aug 2019</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify"><mark class='marker8 underline'>Built and deployed a content-based image search engine.</mark> Mentored by Dr. Bolioli’s team, I trained BERT and Inception V3 to embed images and descriptions in a shared latent space. This project underpinned my high school thesis.</div>
+    <div class="small_margin" style="text-align: justify"><mark class='marker11 underline'>Built and deployed a content-based image search engine.</mark> Mentored by Dr. Bolioli’s team, I trained BERT and Inception V3 to embed images and descriptions in a shared latent space. This project underpinned my high school thesis.</div>
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -304,7 +325,7 @@
             <span>Jan 2020 - Jan 2021</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">Built 3D printer and transformed it into a DIY laser cutter. Developed the open-source Python library <a href='https://github.com/PadLex/SvgToGcode' target='_blank'>svg-to-gcode</a>. The tool’s GUI has <mark class='marker9 underline'>garnered over <a href='https://somsubhra.github.io/github-release-stats/?username=JTechPhotonics&repository=J-Tech-Photonics-Laser-Tool' target='_blank'>20,000 downloads</a> and a community that helps maintain it.</mark></div>
+    <div class="small_margin" style="text-align: justify">Built 3D printer and transformed it into a DIY laser cutter. Developed the open-source Python library <a href='https://github.com/PadLex/SvgToGcode' target='_blank'>svg-to-gcode</a>. The tool’s GUI has <mark class='marker12 underline'>garnered over <a href='https://somsubhra.github.io/github-release-stats/?username=JTechPhotonics&repository=J-Tech-Photonics-Laser-Tool' target='_blank'>20,000 downloads</a> and a community that helps maintain it.</mark></div>
 </div>
         </div>
         <div class="horizontal large_margin" style="justify-content: left; align-items: end">
