Fix printing bugs on chrome and firefox by replacing marker gradient

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <div class="horizontal">
         <div><mark class='marker3 underline'>ETH Zurich</mark></div>
-        <div>2024 - 2026 (expected)</div>
+        <div>2024 - 2026</div>
     </div>
     <div></div>
 </div>
@@ -295,6 +295,7 @@
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
         </div>
+        <div class="print-pagebreak"></div>
         <div class="large_margin">
             <h2>PROJECTS</h2>
             <div class="vertical medium_margin">
@@ -335,8 +336,6 @@
     </div>
 </div>
 <script>
-    console.log('Hello, world!');
-
     async function animateMarkers() {
         const markers = document.querySelectorAll("mark");
 
