--- a/index_src.html
+++ b/index_src.html
@@ -39,6 +39,7 @@
             <h2>PROFESSIONAL EXPERIENCE</h2>
             %%experience%%
         </div>
+        <div class="print-pagebreak"></div>
         <div class="large_margin">
             <h2>PROJECTS</h2>
             %%projects%%
@@ -50,8 +51,6 @@
     </div>
 </div>
 <script>
-    console.log('Hello, world!');
-
     async function animateMarkers() {
         const markers = document.querySelectorAll("mark");
 
