Remove Languages field

--- a/index.html
+++ b/index.html
@@ -34,43 +34,25 @@
             <h2>EDUCATION</h2>
             <div class="vertical medium_margin">
     <div class="horizontal">
-        <div class="title">MSc Computer Science</div>
-        <div>(ML major)</div>
+        <div class="title">ETH Zurich</div>
+        <div>2024 - 2026</div>
     </div>
     <div class="horizontal">
-        <div><mark class='marker3 underline'>ETH Zurich</mark></div>
-        <div>2024 - 2026</div>
+        <div>MSc Computer Science</div>
+        <div>(ML major)</div>
     </div>
     <div></div>
 </div>
 <div class="vertical medium_margin">
     <div class="horizontal">
-        <div class="title">BSc Data Science and AI</div>
-        <div></div>
-    </div>
-    <div class="horizontal">
-        <div>Maastricht University</div>
+        <div class="title">Maastricht University</div>
         <div>2021 - 2024</div>
     </div>
-    <div><mark class='marker4 underline'>Summa Cum Laude</mark>, GPA: 9.0 ≈ 4.0 (USA)</div>
-</div>
-        </div>
-        <div>
-            <h2>LANGUAGES</h2>
-            <div class="medium_margin"></div>
-            <div class="horizontal">
-    <div>
-        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
-        English
+    <div class="horizontal">
+        <div>BSc Data Science and AI</div>
+        <div></div>
     </div>
-    <div>(Native)</div>
-</div>
-<div class="horizontal">
-    <div>
-        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
-        Italian
-    </div>
-    <div>(Native)</div>
+    <div><mark class='marker3 underline'>Summa Cum Laude</mark></div>
 </div>
         </div>
         <div>
@@ -81,28 +63,14 @@
         <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
         Python
     </div>
-    <div>(PyTorch, <mark class='marker5 underline'>JAX</mark>)</div>
+    <div>(PyTorch, JAX, NumPy, TRL)</div>
 </div>
 <div class="horizontal">
     <div>
         <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
         JS
     </div>
-    <div>(React, Node.js)</div>
-</div>
-<div class="horizontal">
-    <div>
-        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
-        C
-    </div>
-    <div>(<mark class='marker6 underline'>CUDA</mark>)</div>
-</div>
-<div class="horizontal">
-    <div>
-        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
-        C#
-    </div>
-    <div>(Unity)</div>
+    <div>(React, Node.js, TypeScript)</div>
 </div>
 <div class="horizontal">
     <div>
@@ -110,6 +78,20 @@
         Java
     </div>
     <div>(Reflection API)</div>
+</div>
+<div class="horizontal">
+    <div>
+        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
+        C
+    </div>
+    <div>(CUDA)</div>
+</div>
+<div class="horizontal">
+    <div>
+        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
+        C#
+    </div>
+    <div>(Unity)</div>
 </div>
 <div class="horizontal">
     <div>
@@ -132,10 +114,10 @@
 
         <div>
             <span style="margin-right: 10px">2nd Author</span>
-            <span><mark class='marker0'>NeurIPS 2025 (SEA)</mark></span>
+            <span><mark class='marker0'>SEA @ NeurIPS 2025</mark></span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">We implemented a new board-game DSL in JAX. <mark class='marker7 underline'>Games compile to XLA, enabling RL training entirely on the GPU.</mark> Offers 10-100x speedup against previous SoTA DSL and lays groundwork for training general game-playing models.</div>
+    <div class="small_margin" style="text-align: justify">We implemented a new board-game DSL in JAX. <mark class='marker4 underline'>Games compile to XLA, enabling RL training entirely on the GPU.</mark> Offers 10-100x speedup against previous SoTA DSL and lays groundwork for training general game-playing models.</div>
 </div>
 <div class="vertical medium_margin">
     <div class="horizontal">
@@ -149,7 +131,7 @@
             <span>under review</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">Only course project selected by <a href='https://ivia.ch/' target='_blank'>IVIA lab</a> for publication. We built a LLM-assisted study environment that syncs slides, recordings, and exercises into a visual knowledge graph to quickly navigate between sources across modalities.</div>
+    <div class="small_margin" style="text-align: justify">Only course project selected by <a href='https://ivia.ch/' target='_blank'>IVIA lab</a> for publication. We built a LLM-assisted study environment that syncs slides, recordings, and exercises into a visual knowledge graph to quickly navigate between multimodal-sources.</div>
 </div>
 <div class="vertical medium_margin">
     <div class="horizontal">
@@ -163,7 +145,7 @@
             <span><mark class='marker1'>NeurIPS 2024</mark></span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">We designed a system to generate novel board games in a DSL using a LLM as a mutation operator. Automated <mark class='marker8 underline'>evaluation through play-through sampling between general game-playing agents</mark>, with heuristics to score runs.</div>
+    <div class="small_margin" style="text-align: justify">We designed a system to generate novel board games in a DSL using a LLM as a mutation operator. Automated <mark class='marker5 underline'>evaluation through play-through sampling between general game-playing agents</mark>, with heuristics to score runs.</div>
 </div>
 <div class="vertical medium_margin">
     <div class="horizontal">
@@ -207,7 +189,7 @@
             <span>July 2024 - Sep 2024</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">Authored an internal paper on code generation with LLMs. <mark class='marker9 underline'>Presented research to 60+ employees</mark>, gaining traction across departments with the potential to impact the next product cycle. Learned to share complex ideas concisely.</div>
+    <div class="small_margin" style="text-align: justify">Authored an internal paper on code generation with LLMs. <mark class='marker6 underline'>Presented research to 60+ employees</mark>, gaining traction across departments with the potential to impact the next product cycle. Learned to share complex ideas concisely.</div>
 <!--    <div class="small_margin collapsable">This is a test</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -221,7 +203,7 @@
             <span>Sep 2022 - Sep 2023</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">Developed a coding assistant for the Ludii DSL. Trained a LLM and <mark class='marker10 underline'>overcame data scarcity using grammar constrained decoding</mark>; had to develop a parser for incomplete code that could mask illegal tokens during inference.</div>
+    <div class="small_margin" style="text-align: justify">Developed a coding assistant for the Ludii DSL. Trained a LLM and <mark class='marker7 underline'>overcame data scarcity using grammar constrained decoding</mark>; had to develop a parser for incomplete code that could mask illegal tokens during inference.</div>
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -263,7 +245,7 @@
             <span>Nov 2018 - Aug 2019</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify"><mark class='marker11 underline'>Built and deployed a content-based image search engine.</mark> Mentored by Dr. Bolioli’s team, I trained BERT and Inception V3 to embed images and descriptions in a shared latent space. This project underpinned my high school thesis.</div>
+    <div class="small_margin" style="text-align: justify"><mark class='marker8 underline'>Built and deployed a content-based image search engine.</mark> Mentored by Dr. Bolioli’s team, I trained BERT and Inception V3 to embed images and descriptions in a shared latent space. This project underpinned my high school thesis.</div>
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -326,12 +308,12 @@
             <span>Jan 2020 - Jan 2021</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">Built 3D printer and transformed it into a DIY laser cutter. Developed the open-source Python library <a href='https://github.com/PadLex/SvgToGcode' target='_blank'>svg-to-gcode</a>. The tool’s GUI has <mark class='marker12 underline'>garnered over <a href='https://somsubhra.github.io/github-release-stats/?username=JTechPhotonics&repository=J-Tech-Photonics-Laser-Tool' target='_blank'>20,000 downloads</a> and a community that helps maintain it.</mark></div>
+    <div class="small_margin" style="text-align: justify">Built 3D printer and transformed it into a DIY laser cutter. Developed the open-source Python library <a href='https://github.com/PadLex/SvgToGcode' target='_blank'>svg-to-gcode</a>. The tool’s GUI has <mark class='marker9 underline'>garnered over <a href='https://somsubhra.github.io/github-release-stats/?username=JTechPhotonics&repository=J-Tech-Photonics-Laser-Tool' target='_blank'>20,000 downloads</a> and a community that helps maintain it.</mark></div>
 </div>
         </div>
         <div class="horizontal large_margin" style="justify-content: left; align-items: end">
             <h2>PASSIONATE</h2>
-            <span style="text-align: justify">about hiking, rock climbing, cooking, and robotics. Board member in student association.</span>
+            <span style="text-align: justify">about hiking, rock climbing, cooking, and robotics. Native English and Italian speaker.</span>
         </div>
     </div>
 </div>
