--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
         Python
     </div>
-    <div>(PyTorch, JAX, NumPy, TRL)</div>
+    <div>(PyTorch, JAX, TRL, NumPy)</div>
 </div>
 <div class="horizontal">
     <div>
